# TinyEye

./: .gitignore  README.md
Mobile Application/: README.md
Mobile Application/TinyEye/: App.js  app.json  env.js  index.js  package-lock.json  package.json
Mobile Application/TinyEye/components/: BackButton.js  Background.js  Button.js  DeleteMenu.js  Header.js  Link.js  Logo.js  LogoHeader.js  NotificationCard.js  Paragraph.js  PersonCard.js  PersonHeader.js  PersonsMenu.js  TextInput.js
Mobile Application/TinyEye/core/: apiRoutes.js  theme.js  utils.js
Mobile Application/TinyEye/navigation/: AuthStack.js  MainTabs.js  index.js
Mobile Application/TinyEye/screens/: FirstScreen.js  HomeScreen.js  LogScreen.js  LoginScreen.js  PersonScreen.js  PersonsScreen.js  ProfileScreen.js  RegisterScreen.js  UsersScreen.js  index.js
Mobile Application/TinyEye/screens/auth/: ForgotPasswordScreen.js  LoginScreen.js  RegisterScreen.js
Mobile Application/TinyEye/screens/persons/: AddPersonNameScreen.js  AddPersonScreen.js  PersonScreen.js  PersonsScreen.js
Mobile Application/TinyEye/store/: index.js
Mobile Application/TinyEye/store/reducers/: AllReducers.js  AuthReducer.js
Recognition System/: .gitignore  CMakeLists.txt  README.md  install.sh
Recognition System/include/logger/: logger.h
Recognition System/include/mobilefacenet/dataloaders/: img_loader.h
Recognition System/include/mtcnn/: mtcnn.h
Recognition System/include/recognition_system/: recognition_system.h
Recognition System/scripts/: rpi-dependencies.sh  server_setup.sh
Recognition System/src/: .env.example  CMakeLists.txt  config.h  dataloader.h  keep-folders.py  keep-some.py  main.cpp  pre_process.py  prepare_dataset.py  testmobilefacenet.h  trainmobilefacenet.h  utils.h
Recognition System/src/argparser/: argparser.cpp  argparser.h
Recognition System/src/classifier/: ArcFace.cpp  ArcFace.h  classifier.cpp  classifier.h  svm.cpp  svm.h
Recognition System/src/facenet/: facenet.cpp  facenet.h
Recognition System/src/logger/: logger.cpp  logger.h
Recognition System/src/mobilefacenet/: BottleNeck.h  ConvBlock.h  ConvBlockDW.h  ConvBlockLinear.h  ConvBlockLinearDW.h  lfw_evaluator.cpp  lfw_evaluator.h  mfn.cpp  mfn.h  mobilefacenet.cpp  mobilefacenet.h  train.h
Recognition System/src/mobilefacenet/classifier/: ArcMarginProduct.h  CosineMarginProduct.h  InnerProduct.h  Margin.h
Recognition System/src/mobilefacenet/dataloader/: CASIA_WebFace_loader.cpp  CASIA_WebFace_loader.h  lfw_loader.cpp  lfw_loader.h
Recognition System/src/mobilefacenet/dataloaders/: img_loader.cpp
Recognition System/src/mobilefacenet/layers/: BottleNeck.h  ConvBlock.h  ConvBlockDW.h  ConvBlockLinear.h  ConvBlockLinearDW.h
Recognition System/src/mobilefacenet/network/: Bottleneck.h  ConvBlockLinear.h  ConvBlockLinearDW.h  MobileFacenet.h
Recognition System/src/mtcnn/: common.cpp  mtcnn.cpp  mtcnn.h  stage_1.cpp  stage_2.cpp
Recognition System/src/python/: DataLoad.py  mobilefacenet.py  train.py
Recognition System/src/python/utils/: visualize.py
Recognition System/src/recognition_system/: recognition_system.cpp  recognition_system.h
Recognition System/src/scripts/: prepare_dataset.py
Recognition System/src/sockets/: socket.cpp  socket.h
Recognition System/src/utils/: utils.cpp  utils.h
Server/: .gitignore  README.md  index.js  package-lock.json  package.json
Server/Model Builder/: .gitignore  CMakeLists.txt  README.md  install.sh  predict.py  train.py
Server/Model Builder/include/: utils.h
Server/Model Builder/include/classifier/: svm.h
Server/Model Builder/include/logger/: logger.h
Server/Model Builder/include/mobilefacenet/: config.h
Server/Model Builder/include/mobilefacenet/dataloaders/: img_loader.h
Server/Model Builder/include/mtcnn/: mtcnn.h
Server/Model Builder/include/recognition_system/: recognition_system.h
Server/Model Builder/src/: CMakeLists.txt  main.cpp
Server/Model Builder/src/argparser/: argparser.h
Server/Model Builder/src/classifier/: ArcFace.cpp  ArcFace.h  ArcMarginProduct.h  svm.cpp  svm.h
Server/Model Builder/src/logger/: logger.cpp  logger.h
Server/Model Builder/src/mobilefacenet/: mobilefacenet.cpp  mobilefacenet.h
Server/Model Builder/src/mobilefacenet/dataloaders/: img_loader.cpp  img_loader.h
Server/Model Builder/src/mobilefacenet/network/: ConvBlock.h  ConvBlockDW.h
Server/Model Builder/src/mtcnn/: mtcnn.cpp  stage_1.cpp  stage_2.cpp
Server/Model Builder/src/recognition_system/: recognition_system.cpp  recognition_system.h
Server/config/: config.json
Server/migrations/: 1-boards.js  2-humans.js  3-users.js  4-images.js  5-models.js  6-log.js  7-server-log.js
Server/models/: Board.js  Human.js  Image.js  Log.js  Model.js  ServerLog.js  User.js  db.js
Server/src/: index.js
Server/src/controllers/: AuthController.js  DynamicController.js  HomeController.js  HumanController.js  ImageController.js  LogController.js  ModelController.js  UserController.js
Server/src/middlewares/: AuthMiddleware.js
Server/src/modules/: LogMan.js  ModelMan.js  ServerLogger.js
Server/src/notifications/: index.js
Server/src/requests/: AuthRequest.js  HomeRequest.js  HumansRequest.js  UsersRequest.js  index.js
Server/src/router/: Route.js  index.js
Server/src/sockets/: index.js
Server/src/storage/: index.js
Server/tests/: Auth.test.js  Human.test.js  Log.test.js
